--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
 VITE_API_URL=https://library-system-api-production.up.railway.app/api/v1
+VITE_SCANNER_URL=https://sistema-libreria.netlify.app/scanner
